--- a/www/css/fav.css
+++ b/www/css/fav.css
@@ -4,3 +4,4 @@
 .shop-info{line-height:12px;float:left;}
 .shop-name-link{font-size:16px;color:#444;}
 .shop-info span{font-size:14px;color:#666;}
+.ui-content{padding:0;}
